@@ -1,3 +1,4 @@
+* Support generate barcode of different type
 * Add code on product category
 * Add product deactivable mixins
 
